--- a/window/package.json
+++ b/window/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.6.2",
+    "angular-route": "^1.6.2",
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1"
   }
