Rename results to request; add url webview for GET;

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,10 @@
 
   "description": "Web Request Fuzzer with Automation",
   "version": "0.0.1",
-  "permissions": ["<all_urls>"],
+  "permissions": [
+    "<all_urls>",
+    "webview"  
+  ],
   "app": {
     "background": {
       "scripts": ["background/background.js"]
