--- a/window/package.json
+++ b/window/package.json
@@ -12,6 +12,7 @@
     "angular": "^1.6.2",
     "angular-route": "^1.6.2",
     "bootstrap": "^3.3.7",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "jsoneditor": "^5.5.11"
   }
 }
